--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -31,7 +31,8 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
         freeCompilerArgs += [
             '-Xuse-experimental=kotlinx.coroutines.FlowPreview',
-            '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi'
+            '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+            '-Xopt-in=org.koin.core.component.KoinApiExtension'
         ]
     }
 
