--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,9 +15,9 @@ ext.versions = [
     "fragment"          : "1.3.0-beta01",
     "lifecycle"         : "2.2.0",
     "viewpager"         : "1.0.0",
-    "paging"            : "3.0.0-alpha07",
+    "paging"            : "3.0.0-alpha08",
     "recyclerview"      : "1.2.0-alpha06",
-    "startup"           : "1.0.0-beta01",
+    "startup"           : "1.0.0",
     "swiperefreshlayout": "1.1.0",
     "design"            : "1.2.1",
     "koin"              : "2.2.0-rc-3",
