--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ subprojects {
     }
 
     apply from: "../detekt.gradle"
+    apply from: "../dokka.gradle"
 }
 
 tasks.withType(JavaCompile) {
@@ -77,4 +78,4 @@ task detektAll(dependsOn: [
 
 apply from: "deploy.gradle"
 
-apply from: "dokka.gradle"
+//apply from: "dokka.gradle"
