--- a/dokka.gradle
+++ b/dokka.gradle
@@ -1,46 +1,37 @@
 apply plugin: "org.jetbrains.dokka"
 
-dokka {
-    outputFormat = 'html'
-    outputDirectory = "$buildDir/javadoc"
+tasks.named("dokkaJavadoc") {
+    outputDirectory.set(file("$buildDir/javadoc"))
 
-    subProjects = ["dbinspector", "dbinspector-no-op"]
-
-    disableAutoconfiguration = false
-    cacheRoot = 'default'
-    configuration {
-        moduleName = 'data'
-        includeNonPublic = false
-        skipDeprecated = true
-        reportUndocumented = true
-        skipEmptyPackages = true
-        // Specifies the location of the project source code on the Web.
-        // If provided, Dokka generates "source" links for each declaration.
-        // Repeat for multiple mappings
-        sourceLink {
-            // Unix based directory relative path to the root of the project (where you execute gradle respectively).
-            path = "src/main/kotlin" // or simply "./"
-
-            // URL showing where the source code can be accessed through the web browser
-            url = "https://github.com/infinum/android_dbinspector/"
-            //remove src/main/kotlin if you use "./" above
-
-            // Suffix which is used to append the line number to the URL. Use #L for GitHub
-            lineSuffix = "#L"
-        }
-        jdkVersion = 8
-        noStdlibLink = false
-        noJdkLink = false
-        noAndroidSdkLink = false
-        androidVariants = ["debug"]
-
-        perPackageOption {
-            prefix = "com.infinum.dbinspector.extensions"
-            suppress = true
-        }
-        perPackageOption {
-            prefix = "com.infinum.dbinspector.ui.shared"
-            suppress = true
+    dokkaSourceSets {
+        named("main") {
+            includeNonPublic.set(false)
+            skipDeprecated.set(true)
+            reportUndocumented.set(true)
+            skipEmptyPackages.set(true)
+            platform.set(org.jetbrains.dokka.Platform.jvm)
+            jdkVersion.set(8)
+            noStdlibLink.set(false)
+            noJdkLink.set(false)
+            noAndroidSdkLink.set(false)
+            androidVariants.set(["debug"])
+            sourceLink {
+                localDirectory.set(file("src/main/kotlin"))
+                remoteUrl.set(uri("https://github.com/infinum/android_dbinspector/"))
+                remoteLineSuffix.set("#L")
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.extensions")
+                suppress.set(true)
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.domain.shared")
+                suppress.set(true)
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.ui.shared")
+                suppress.set(true)
+            }
         }
     }
 }
