--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -19,14 +19,3 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
-
-# Temporary workaround to enable building on travis
-# TODO fix the proper way
-# http://stackoverflow.com/a/17315335/2643666
-signing.keyId=*secret*
-signing.password=*secret*
-signing.secretKeyRingFile=*secret*
-
-sonatypeRepo=https://oss.sonatype.org/service/local/staging/deploy/maven2/
-sonatypeUsername=*secret*
-sonatypePassword=*secret*
