--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,24 +6,23 @@ ext.dbinspector = [
 
 ext.versions = [
     "dbinspector"       : "5.0.0",
-    "gradle"            : '4.1.0',
+    "gradle"            : '4.1.1',
     "kotlin"            : "1.4.10",
     "coroutines"        : "1.4.1",
     "bintray"           : "1.8.5",
     "core"              : "1.3.2",
     "appcompat"         : "1.2.0",
     "fragment"          : "1.3.0-beta01",
-    "lifecycle"         : "2.2.0",
+    "lifecycle"         : "2.3.0-beta01",
     "viewpager"         : "1.0.0",
-    "paging"            : "3.0.0-alpha08",
+    "paging"            : "3.0.0-alpha09",
     "recyclerview"      : "1.2.0-alpha06",
     "startup"           : "1.0.0",
     "swiperefreshlayout": "1.1.0",
     "design"            : "1.2.1",
-    "koin"              : "2.2.0-rc-4",
+    "koin"              : "2.2.0",
     "timber"            : "4.7.1",
-    "maven"             : "2.1",
-    "detekt"            : "1.14.1",
+    "detekt"            : "1.14.2",
     "dokka"             : "1.4.10.2"
 ]
 
@@ -64,9 +63,6 @@ ext.packages = [
     ],
     "timber"     : [
         "core": "com.jakewharton.timber:timber:${versions.timber}"
-    ],
-    "maven"      : [
-        "plugin": "com.github.dcendents:android-maven-gradle-plugin:${versions.maven}"
     ],
     "detekt"     : [
         "plugin"    : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:${versions.detekt}",
