--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
+apply from: "protobuf.gradle"
 
 android {
     compileSdkVersion buildConfig.compileSdk
@@ -30,7 +31,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
         freeCompilerArgs += [
-            '-Xopt-in=org.koin.core.component.KoinApiExtension'
+                '-Xopt-in=org.koin.core.component.KoinApiExtension'
         ]
     }
 
@@ -54,6 +55,8 @@ dependencies {
     implementation packages.androidx.paging
     implementation packages.androidx.startup
     implementation packages.androidx.swiperefreshlayout
+    implementation "androidx.datastore:datastore:1.0.0-alpha05"
+    implementation "com.google.protobuf:protobuf-javalite:3.10.0"
     implementation packages.google.design
     implementation packages.kotlinx.coroutines
     implementation packages.koin.android
