Enable Kotlin explicit API

--- a/dbinspector-no-op/build.gradle
+++ b/dbinspector-no-op/build.gradle
@@ -29,6 +29,9 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+        freeCompilerArgs += [
+                '-Xexplicit-api=strict'
+        ]
     }
 
     sourceSets.each {
