--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -9,23 +9,23 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
 
+<!--        &lt;!&ndash;suppress AndroidDomInspection &ndash;&gt;-->
+<!--        <activity-alias-->
+<!--            android:name="com.infinum.dbinspector.DbInspectorActivity"-->
+<!--            tools:node="remove" />-->
+
+<!--        &lt;!&ndash;suppress AndroidDomInspection &ndash;&gt;-->
+<!--        <activity-alias-->
+<!--            android:name="com.infinum.dbinspector.DbInspectorActivity"-->
+<!--            tools:replace="android:label"-->
+<!--            android:label="@string/app_name" />-->
+
         <activity
             android:name="com.infinum.dbinspector.sample.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name="com.infinum.dbinspector.DbInspectorActivity"
-            android:icon="@drawable/dbinspector_launcher"
-            android:roundIcon="@drawable/dbinspector_launcher_round"
-            android:label="@string/dbinspector_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -37,7 +37,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
     </application>
