Update Paging3. Add build types to modules. Add Proguard to no-op.

--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -14,9 +14,14 @@ android {
     }
 
     buildTypes {
-
-        release {
+        debug {
+            testCoverageEnabled true
+            debuggable true
             minifyEnabled false
+        }
+        release {
+            debuggable false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.txt"
         }
     }
