--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -59,6 +59,6 @@ dependencies {
     implementation packages.koin.android
     implementation packages.koin.scope
     implementation packages.koin.viewmodel
-    debugImplementation project(":dbinspector")
-    releaseImplementation project(":dbinspector-no-op")
+    debugImplementation packages.dbinspector.dbinspector
+    releaseImplementation packages.dbinspector.dbinspector_no_op
 }
