--- a/dbinspector/protobuf.gradle
+++ b/dbinspector/protobuf.gradle
@@ -2,12 +2,9 @@ apply plugin: "com.google.protobuf"
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.10.0"
+        artifact = packages.google.protobuf.artifact
     }
 
-    // Generates the java Protobuf-lite code for the Protobufs in this project. See
-    // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
-    // for more information.
     generateProtoTasks {
         all().each { task ->
             task.builtins {
