Disable Jetifier because it's not needed.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # org.gradle.parallel=true
 
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
