--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         classpath packages.gradle
         classpath packages.bintray
         classpath packages.kotlin.plugin
-        classpath 'de.aaschmid:gradle-cpd-plugin:3.1'
+        classpath packages.cpd.plugin
         classpath packages.detekt.plugin
         classpath packages.dokka.plugin
         classpath packages.google.protobuf.plugin
