--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,6 +25,7 @@ ext.versions = [
         "koin"              : "2.2.2",
         "timber"            : "4.7.1",
         "detekt"            : "1.15.0",
+        "cpd"               : "3.1",
         "dokka"             : "1.4.20"
 ]
 
@@ -72,6 +73,9 @@ ext.packages = [
         "detekt"     : [
                 "plugin"    : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:${versions.detekt}",
                 "formatting": "io.gitlab.arturbosch.detekt:detekt-formatting:${versions.detekt}"
+        ],
+        "cpd"        : [
+                "plugin": "de.aaschmid:gradle-cpd-plugin:${versions.cpd}"
         ],
         "dokka"      : [
                 "plugin": "org.jetbrains.dokka:dokka-gradle-plugin:${versions.dokka}"
