--- a/deploy.gradle
+++ b/deploy.gradle
@@ -1,3 +1,5 @@
+apply from: "shared.gradle"
+
 task deployDbInspector(dependsOn: ordered(
         ':dbinspector:clean',
         ':dbinspector:bintrayUpload'
@@ -20,12 +22,4 @@ task deployAll(dependsOn: ordered(
 )) {
     group = "Deploy"
     description = "Deploy all modules to Bintray"
-}
-
-def ordered(String... taskPaths) {
-    def allTasks = taskPaths.collect { tasks.getByPath(it) }
-    for (int i = 0; i < allTasks.size() - 1; i++) {
-        allTasks[i + 1].mustRunAfter(allTasks[i])
-    }
-    return allTasks
 }
