Add Github workflow

--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -2,7 +2,7 @@ name: Validate Gradle Wrapper
 on:
   push:
     branches:
-      - dev
+      - develop
       - master
   pull_request:
     branches:
