--- a/.github/workflows/run-static-checks.yml
+++ b/.github/workflows/run-static-checks.yml
@@ -14,14 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Detekt
-      - uses: eskatos/gradle-command-action@v1
+        uses: eskatos/gradle-command-action@v1
         with:
           arguments: detektAll
       - name: ktlint
-      - uses: eskatos/gradle-command-action@v1
+        uses: eskatos/gradle-command-action@v1
         with:
           arguments: ktlintAll
       - name: CPD
-      - uses: eskatos/gradle-command-action@v1
+        uses: eskatos/gradle-command-action@v1
         with:
           arguments: cpdAll
