Fix Github workflow

--- a/.github/workflows/run-static-checks.yml
+++ b/.github/workflows/run-static-checks.yml
@@ -13,6 +13,8 @@ jobs:
     name: Detekt
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
       - name: Detekt
         uses: eskatos/gradle-command-action@v1
         with:
