--- a/.github/workflows/run-static-checks.yml
+++ b/.github/workflows/run-static-checks.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   checkout:
-    name: Code checkout
+    name: Code analysis
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
