Save Gradle caches in Github Actions flow.

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -15,9 +15,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
+      - name: Save Gradle Caches
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches/
+          key: gradle-caches-${{ runner.os }}-${{ matrix.os }}-${{ matrix.jdk }}
+          restore-keys: |
+            gradle-caches-${{ runner.os }}-${{ matrix.os }}-${{ matrix.jdk }}
+
       - name: Detekt
         run: ./gradlew detektAll
       - name: ktlint
         run: ./gradlew ktlintAll
       - name: CPD
         run: ./gradlew cpdAll
+
+      - name: Stop Gradle
+        run: ./gradlew --stop
